SIGARIA-35 temporarily downgrading to java10 for vampatibility reasons