@@ -1,13 +1,28 @@
 package ee.openeid.siga.auth.filter.hmac;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import ee.openeid.siga.auth.properties.SecurityConfigurationProperties;
-import ee.openeid.siga.common.event.SigaEvent;
-import ee.openeid.siga.common.event.SigaEventLogger;
-import ee.openeid.siga.common.event.SigaEventName;
-import ee.openeid.siga.common.exception.ErrorResponseCode;
-import ee.openeid.siga.webapp.json.ErrorResponse;
-import lombok.experimental.FieldDefaults;
+import static ee.openeid.siga.auth.filter.hmac.HmacHeader.X_AUTHORIZATION_HMAC_ALGORITHM;
+import static ee.openeid.siga.auth.filter.hmac.HmacHeader.X_AUTHORIZATION_SERVICE_UUID;
+import static ee.openeid.siga.auth.filter.hmac.HmacHeader.X_AUTHORIZATION_SIGNATURE;
+import static ee.openeid.siga.auth.filter.hmac.HmacHeader.X_AUTHORIZATION_TIMESTAMP;
+import static java.lang.Long.parseLong;
+import static java.time.Instant.now;
+import static java.time.Instant.ofEpochSecond;
+import static java.util.Collections.emptyList;
+import static java.util.Objects.requireNonNull;
+import static java.util.Optional.ofNullable;
+import static lombok.AccessLevel.PRIVATE;
+import static org.apache.commons.io.IOUtils.toByteArray;
+
+import java.io.IOException;
+import java.io.OutputStream;
+import java.time.Instant;
+
+import javax.servlet.FilterChain;
+import javax.servlet.ServletException;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.InternalAuthenticationServiceException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -17,23 +32,14 @@ import org.springframework.security.web.authentication.AbstractAuthenticationPro
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationSuccessHandler;
 import org.springframework.security.web.util.matcher.RequestMatcher;
 
-import javax.servlet.FilterChain;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.io.OutputStream;
-import java.time.Instant;
-
-import static ee.openeid.siga.auth.filter.hmac.HmacHeader.*;
-import static java.lang.Long.parseLong;
-import static java.time.Instant.now;
-import static java.time.Instant.ofEpochSecond;
-import static java.util.Collections.emptyList;
-import static java.util.Objects.requireNonNull;
-import static java.util.Optional.ofNullable;
-import static lombok.AccessLevel.PRIVATE;
-import static org.apache.commons.io.IOUtils.toByteArray;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import ee.openeid.siga.auth.properties.SecurityConfigurationProperties;
+import ee.openeid.siga.common.event.SigaEvent;
+import ee.openeid.siga.common.event.SigaEventLogger;
+import ee.openeid.siga.common.event.SigaEventName;
+import ee.openeid.siga.common.exception.ErrorResponseCode;
+import ee.openeid.siga.webapp.json.ErrorResponse;
+import lombok.experimental.FieldDefaults;
 
 @FieldDefaults(level = PRIVATE, makeFinal = true)
 public class HmacAuthenticationFilter extends AbstractAuthenticationProcessingFilter {
@@ -89,7 +95,7 @@ public class HmacAuthenticationFilter extends AbstractAuthenticationProcessingFi
 
     private void checkIfTokenIsExpired(String timestamp) {
         if (TOKEN_EXPIRATION_IN_SECONDS != -1) {
-            if (timestamp.isBlank()) {
+            if (StringUtils.isBlank(timestamp)) {
                 throw new HmacAuthenticationException("Invalid X-Authorization-Timestamp");
             }
             Instant validUntil = ofEpochSecond(parseLong(timestamp)).plusSeconds(TOKEN_EXPIRATION_IN_SECONDS + TOKEN_CLOCK_SKEW);
