@@ -1,12 +1,14 @@
 package ee.openeid.siga.service.signature;
 
-import ee.openeid.siga.common.auth.SigaUserDetails;
-import ee.openeid.siga.service.signature.test.RequestUtil;
-import ee.openeid.siga.service.signature.test.TestUtil;
-import ee.openeid.siga.session.SessionResult;
-import ee.openeid.siga.session.SessionService;
-import ee.openeid.siga.webapp.json.CreateHashcodeContainerRequest;
-import ee.openeid.siga.webapp.json.Signature;
+import static ee.openeid.siga.service.signature.test.RequestUtil.CONTAINER_ID;
+import static ee.openeid.siga.service.signature.test.RequestUtil.SIGNED_HASHCODE;
+import static org.mockito.ArgumentMatchers.any;
+
+import java.io.IOException;
+import java.net.URISyntaxException;
+import java.util.Base64;
+import java.util.List;
+
 import org.apache.commons.lang3.StringUtils;
 import org.junit.Assert;
 import org.junit.Before;
@@ -20,14 +22,13 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 
-import java.io.IOException;
-import java.net.URISyntaxException;
-import java.util.Base64;
-import java.util.List;
-
-import static ee.openeid.siga.service.signature.test.RequestUtil.CONTAINER_ID;
-import static ee.openeid.siga.service.signature.test.RequestUtil.SIGNED_HASHCODE;
-import static org.mockito.ArgumentMatchers.any;
+import ee.openeid.siga.common.auth.SigaUserDetails;
+import ee.openeid.siga.service.signature.test.RequestUtil;
+import ee.openeid.siga.service.signature.test.TestUtil;
+import ee.openeid.siga.session.SessionResult;
+import ee.openeid.siga.session.SessionService;
+import ee.openeid.siga.webapp.json.CreateHashcodeContainerRequest;
+import ee.openeid.siga.webapp.json.Signature;
 
 @RunWith(MockitoJUnitRunner.class)
 public class DetachedDataFileContainerServiceTest {
@@ -56,21 +57,21 @@ public class DetachedDataFileContainerServiceTest {
         CreateHashcodeContainerRequest request = RequestUtil.getHashcodeCreateContainerRequest();
         containerService.setSessionService(sessionService);
         String containerId = containerService.createContainer(request.getDataFiles());
-        Assert.assertFalse(containerId.isBlank());
+        Assert.assertFalse(StringUtils.isBlank(containerId));
     }
 
     @Test
     public void successfulUploadContainer() throws IOException, URISyntaxException {
         String container = new String(Base64.getEncoder().encode(TestUtil.getFileInputStream(SIGNED_HASHCODE).readAllBytes()));
         String containerId = containerService.uploadContainer(container);
-        Assert.assertFalse(containerId.isBlank());
+        Assert.assertFalse(StringUtils.isBlank(containerId));
     }
 
     @Test
     public void successfulGetContainer() throws IOException, URISyntaxException {
         Mockito.when(sessionService.getContainer(any())).thenReturn(RequestUtil.createSessionHolder());
         String container = containerService.getContainer(CONTAINER_ID);
-        Assert.assertFalse(container.isBlank());
+        Assert.assertFalse(StringUtils.isBlank(container));
     }
 
     @Test
